# mcp-computer-use

./: Cargo.toml  README.md  build.rs
.github/workflows/: release-assets.yml  rust-ci.yml
scripts/: publish-release-assets.sh
src/: computer_use.rs  desktop.rs  main.rs  scaling.rs
src/screen_capture/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
