[package]
name = "mcp-computer-use"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
